# research-mcp-tool

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  routing.yaml  test_final_mcp_stdio.py  test_mcp_connection.py
.claude/: settings.local.json
docs/: smoke.md
src/research_mcp/: __init__.py  openrouter.py  routing.py  server.py
tests/: test_basic.py  test_end_to_end.py  test_live.py  test_mcp_server.py
