[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-mcp-tool"
version = "0.1.0"
description = "Python MCP server that routes to OpenRouter"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Research MCP Tool", email = "research@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "modelcontextprotocol",
    "httpx",
    "pyyaml",
    "python-dotenv",
    "pydantic",
    "typer",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
]

[project.scripts]
research-mcp = "research_mcp.server:main"

[project.urls]
Homepage = "https://github.com/dmitrystakhin/research-mcp-tool"
Repository = "https://github.com/dmitrystakhin/research-mcp-tool"
Issues = "https://github.com/dmitrystakhin/research-mcp-tool/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"